Bug 1735348 [Linux] Don't check D&D status by mScheduledTask as it's misleading, r=emilio a=RyanVM

mScheduledTask means scheduled task. When there's nothing sheduled we look inactive but that's not correct.
Let's remove that check as it was before.

Differential Revision: https://phabricator.services.mozilla.com/D128488